<?xml version="1.0" encoding="utf-8"?><!-- created by mohit.soni @ 24-01-2020 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar" />
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@color/app_light_yellow"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="#ID"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/transaction_date"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/old_balance"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/new_balance"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/transaction_method"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/transaction_type"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/amount"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/status"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recent_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>