<?xml version="1.0" encoding="utf-8"?><!-- Create by mohit.soni @ 21-10-219 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_toolbar_dark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_transfer_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/app_toolbar_dark"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".15" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7">

                <EditText
                    android:id="@+id/et_transfer_title_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@drawable/reactangle_back_grey_search"
                    android:drawableRight="@drawable/ic_search_yellow"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="center"
                    android:hint="@string/search"
                    android:paddingRight="10dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp" />

            </RelativeLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".15" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight=".005"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".20" />

            <TextView
                android:id="@+id/tv_transfer_view_team"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".60"
                android:background="@drawable/view_team"
                android:gravity="center"
                android:text="@string/view_team"
                android:textColor="@color/app_light_yellow" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".20" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_transfer_2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/ll_transfer_1"
        android:layout_marginTop="10dp"
        android:background="@color/app_toolbar_dark"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_transfer_tag_type_gkp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:background="@drawable/type_tag_start"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/gkp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_transfer_tag_type_def"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:background="@drawable/type_tag_mid"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/def"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_transfer_tag_type_mid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:background="@drawable/type_tag_mid"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/mid"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_transfer_tag_type_fwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:background="@drawable/type_tag_end"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/fwd"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_transfer_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_transfer_2"
        android:paddingTop="7dp"
        android:paddingBottom="7dp">

        <com.fan.core.custom_view.StepProgressBar
            android:id="@+id/progress_transfer"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:activeDotColor="@android:color/darker_gray"
            app:activeDotIcon="@drawable/player_select_count_2"
            app:activeDotIndex="0"
            app:dotSize="39dp"
            app:inactiveDotColor="@color/white"
            app:inactiveDotIcon="@drawable/player_deselect_count"
            app:numberDots="10"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_transfer_4"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/ll_transfer_3"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_transfer_base_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/app_light_yellow"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/players"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_transfer_currency"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/app_light_yellow"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/team"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_transfer_ts"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/app_light_yellow"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/points"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_tranfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_transfer_4" />

</RelativeLayout>
